--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<span class="avatar"><img src="images/avatar.jpeg" alt="" /></span>
 					<h1>Samuel Stiles</h1>
 					<p>Software Engineer @ <a target="_blank" href="http://www.liveopscloud.com/">Liveops Cloud</a></p>
-					<p>Freelance dev @ <a target="_blank" href="http://www.bitfox.ca">Bitfox</a></p>
+					<p>Supreme Overlord @ <a target="_blank" href="http://www.bitfox.ca">Bitfox</a></p>
 				</header>
 				<footer>
 					<ul class="icons">
