--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 				<header>
 					<span class="avatar"><img src="images/avatar.jpeg" alt="" /></span>
 					<h1>Samuel Stiles</h1>
-					<p>Software Engineer @ <a target="_blank" href="http://www.liveopscloud.com/">Liveops Cloud</a></p>
+					<p>Software Engineer @ <a target="_blank" href="http://www.serenova.com/">Serenova</a></p>
 					<p>Supreme Overlord @ <a target="_blank" href="http://www.bitfox.ca">Bitfox</a></p>
 				</header>
 				<footer>
 					<ul class="icons">
-						<li><a target="_blank" href="https://github.com/latros" class="fa-github">github</a></li>
+						<li><a target="_blank" href="https://github.com/samstiles" class="fa-github">github</a></li>
 						<li><a target="_blank" href="https://twitter.com/samueldev" class="fa-twitter">Twitter</a></li>
 						<li><a target="_blank" href="https://www.linkedin.com/in/samuelstiles" class="fa-linkedin">linkedin</a></li>
 					</ul>
